# offline_transcribe_app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
