[project]
name = "offline-transcribe-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "faster-whisper>=1.1.0",
    "gigaam>=0.1.0",
    "librosa>=0.11.0",
    "nemo-toolkit[asr]>=2.4.0",
    "openai-whisper>=20250625",
    "orjson>=3.11.3",
    "pydub>=0.25.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "whisperx>=3.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]

[tool.ruff]
exclude = [
    ".git",
    ".vscode",
    ".ruff_cache",
    ".venv",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
